cabal-version:      3.0
name:               miso
version:            0.1.0.0
synopsis:           central account management service

-- A longer description of the package.
-- description:
homepage:           https://github.com/KaratsubaLabs/miso

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Daniel Liu
maintainer:         mr.picklepinosaur@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable miso
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        scotty >0.12,
        miso

    hs-source-dirs:   app
    default-language: Haskell2010
